# ikt222-project

./: pass.txt  pyproject.toml
code/solutions/attack_1/: ascii.py  attack1.py  main.py  main_egge.py
code/solutions/attack_2/: bash.sh  keylogger.js  main_egge.py  password.txt
notes/: 1.txt
