[tool.poetry]
name = "ikt-222-solution"
version = "0.1.0"
description = ""
authors = ["Bjørnar Fauske Røn <bjornar.f.r@gmail.com>", "Andreas Egge Lye <andreas.eggelye@gmail.com>","Helene Abildsnes <heleneabildsnes@hotmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
requests = "^2.31.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
